# tldraw-tauri

./: flake.nix  index.html  package.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
