[package]
name = "tldraw-app"
version = "0.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
